--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "license": "ISC",
   "devDependencies": {
     "serverless-offline": "^8.5.0"
+  },
+  "dependencies": {
+    "axios": "^0.26.0"
   }
 }
