--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "serverless-offline": "^8.5.0"
   },
   "dependencies": {
-    "axios": "^0.26.0"
+    "axios": "^0.26.0",
+    "jsonwebtoken": "^8.5.1",
+    "jwk-to-pem": "^2.0.5"
   }
 }
