--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "add.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "serverless-offline": "^8.5.0"
+    "serverless-offline": "^8.5.0",
+    "jest": "^27.5.1"
   },
   "dependencies": {
     "aws-sdk": "^2.1103.0",
