--- a/serverless.yml
+++ b/serverless.yml
@@ -7,7 +7,7 @@ provider:
   runtime: nodejs12.x
   lambdaHashingVersion: 20201221
   region: eu-west-1
-  stage: dev
+  stage: ${opt:stage, 'dev'}
 
 plugins:
   - serverless-offline
@@ -24,8 +24,8 @@ functions:
   auth:
     handler: auth.auth
     environment:
-      CLIENT_ID: ${ssm:/calculator/dev/clientId}
-      URL: ${ssm:/calculator/dev/oAuthurl}
+      CLIENT_ID: ${ssm:/calculator/${self:provider.stage}/clientId}
+      URL: ${ssm:/calculator/${self:provider.stage}/oAuthurl}
     events:
       - http:
           path: /auth
@@ -71,12 +71,12 @@ functions:
   authorizerFunction:
     handler: handler.authorize
     environment:
-      ISS: ${ssm:/calculator/dev/ISS}
+      ISS: ${ssm:/calculator/${self:provider.stage}/ISS}
 
   auther:
     handler: handler.authorize
     environment:
-      ISS: ${ssm:/calculator/dev/ISS}
+      ISS: ${ssm:/calculator/${self:provider.stage}/ISS}
     events:
       - http:
           path: /auther
